--- a/.github/workflows/python-lib.yaml
+++ b/.github/workflows/python-lib.yaml
@@ -1,8 +1,17 @@
 name: Python_library
 
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - main
+  
+  pull_request:
+    branches:
+      - main
+
+# on:
+#   release:
+#     types: [published]
 
 permissions:
   contents: read
@@ -24,8 +33,8 @@ jobs:
         pip install build
     - name: Build package
       run: python -m build
-#     - name: Publish package
-#       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-#       with:
-#         user: __token__
-#         password: ${{ secrets.PYPI_API_TOKEN }}
+    - name: Publish package
+      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+      with:
+        user: __token__
+        password: ${{ secrets.PYPI_API_TOKEN }}
