--- a/.github/workflows/python-lib.yaml
+++ b/.github/workflows/python-lib.yaml
@@ -33,8 +33,10 @@ jobs:
         pip install build
     - name: Build package
       run: python -m build
+    - name: Install twine
+      run: pip install setuptools twine
     - name: Publish package
-      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+      uses: pypa/gh-action-pypi-publish@twine upload --repository-url https://upload.pypi.org/legacy/ dist/*
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
