--- a/.github/workflows/python-lib.yaml
+++ b/.github/workflows/python-lib.yaml
@@ -35,8 +35,8 @@ jobs:
       run: python -m build
     - name: Install twine
       run: pip install setuptools twine
-    - name: Publish package
-      uses: pypa/gh-action-pypi-publish@twine upload --repository-url https://upload.pypi.org/legacy/ dist/*
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
+#     - name: Publish package
+#       uses: pypa/gh-action-pypi-publish@twine upload --repository-url https://upload.pypi.org/legacy/ dist/*
+#       with:
+#         user: __token__
+#         password: ${{ secrets.PYPI_API_TOKEN }}
