--- a/.github/workflows/python-lib.yaml
+++ b/.github/workflows/python-lib.yaml
@@ -35,6 +35,8 @@ jobs:
       run: python -m build
     - name: Install twine
       run: pip install setuptools twine
+    - name: Run script
+      run: python test.py
 #     - name: Publish package
 #       uses: pypa/gh-action-pypi-publish@twine upload --repository-url https://upload.pypi.org/legacy/ dist/*
 #       with:
